--- a/notebooks/06_while_input.ipynb
+++ b/notebooks/06_while_input.ipynb
@@ -13,33 +13,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Previous: If Statements](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/if_statements.ipynb) | \n",
-    "[Home](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/index.ipynb) |\n",
-    "[Next: Basic Terminal Apps](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/terminal_apps.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Contents\n",
     "===\n",
     "- [What is a `while` loop?](#What-is-a-while-loop?)\n",
     "    - [General syntax](#General-syntax)\n",
     "    - [Example](#Example)\n",
-    "    - [Exercises](#Exercises-while)\n",
     "- [Accepting user input](#Accepting-user-input)\n",
     "    - [General syntax](#General-syntax-input)\n",
     "    - [Example](#Example-input)\n",
-    "    - [Accepting input in Python 2.7](#Accepting-input-in-Python-2.7)\n",
-    "    - [Exercises](#Exercises-input)\n",
     "- [Using while loops to keep your programs running](#Using-while-loops-to-keep-your-programs-running)\n",
-    "    - [Exercises](#Exercises-running)\n",
     "- [Using while loops to make menus](#Using-while-loops-to-make-menus)\n",
     "- [Using while loops to process items in a list](#Using-while-loops-to-process-items-in-a-list)\n",
-    "- [Accidental Infinite loops](#Accidental-Infinite-loops)\n",
-    "    - [Exercises](#Exercises-infinite)\n",
-    "- [Overall Challenges](#Overall-Challenges)"
+    "- [Accidental Infinite loops](#Accidental-Infinite-loops)"
    ]
   },
   {
@@ -72,6 +57,7 @@
     "while game_active:\n",
     "    # Run the game.\n",
     "    # At some point, the game ends and game_active will be set to False.\n",
+    "    game_active = False\n",
     "    #   When that happens, the loop will stop executing.\n",
     "    \n",
     "# Do anything else you want done after the loop runs."
@@ -99,23 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are still playing, because your power is 5.\n",
-      "You are still playing, because your power is 4.\n",
-      "You are still playing, because your power is 3.\n",
-      "You are still playing, because your power is 2.\n",
-      "You are still playing, because your power is 1.\n",
-      "\n",
-      "Oh no, your power dropped to 0! Game Over.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The player's power starts out at 5.\n",
     "power = 5\n",
@@ -129,37 +101,6 @@
     "    power = power - 1\n",
     "    \n",
     "print(\"\\nOh no, your power dropped to 0! Game Over.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[top](#)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"Exercises-while\"></a>\n",
-    "Exercises\n",
-    "---\n",
-    "#### Growing Strength\n",
-    "- Make a variable called strength, and set its initial value to 5.\n",
-    "- Print a message reporting the player's strength.\n",
-    "- Set up a while loop that runs until the player's strength increases to a value such as 10.\n",
-    "- Inside the while loop, print a message that reports the player's current strength.\n",
-    "- Inside the while loop, write a statement that increases the player's strength.\n",
-    "- Outside the while loop, print a message reporting that the player has grown too strong, and that they have moved up to a new level of the game.\n",
-    "- Bonus: Play around with different cutoff levels for the value of *strength*, and play around with different ways to increase the strength value within the while loop."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[top](#)"
    ]
   },
   {
@@ -211,18 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please tell me someone I should know: jessica\n",
-      "['guido', 'tim', 'jesse', 'jessica']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start with a list containing several names.\n",
     "names = ['guido', 'tim', 'jesse']\n",
@@ -241,76 +173,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accepting input in Python 2.7\n",
-    "---\n",
-    "In Python 3, you always use `input()`. In Python 2.7, you need to use `raw_input()`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please tell me someone I should know: jessica\n",
-      "['guido', 'tim', 'jesse', 'jessica']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The same program, in Python 2.7\n",
-    "\n",
-    "# Start with a list containing several names.\n",
-    "names = ['guido', 'tim', 'jesse']\n",
-    "\n",
-    "# Ask the user for a name.\n",
-    "new_name = raw_input(\"Please tell me someone I should know: \")\n",
-    "\n",
-    "# Add the new name to our list.\n",
-    "names.append(new_name)\n",
-    "\n",
-    "# Show that the name has been added to the list.\n",
-    "print(names)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The function `input()` will work in Python 2.7, but it's not good practice to use it. When you use the `input()` function in Python 2.7, Python runs the code that's entered. This is fine in controlled situations, but it's not a very safe practice overall.\n",
-    "\n",
-    "If you're using Python 3, you have to use `input()`. If you're using Python 2.7, use `raw_input()`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"Exercises-input\"></a>\n",
-    "Exercises\n",
-    "---\n",
-    "#### Game Preferences\n",
-    "- Make a list that includes 3 or 4 games that you like to play.\n",
-    "- Print a statement that tells the user what games you like.\n",
-    "- Ask the user to tell you a game they like, and store the game in a variable such as `new_game`.\n",
-    "- Add the user's game to your list.\n",
-    "- Print a new statement that lists all of the games that we like to play (*we* means you and your user)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[top](#)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Using while loops to keep your programs running\n",
     "===\n",
     "Most of the programs we use every day run until we tell them to quit, and in the background this is often done with a while loop. Here is an example of how to let the user enter an arbitrary number of names."
@@ -318,22 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please tell me someone I should know, or enter 'quit': guido\n",
-      "Please tell me someone I should know, or enter 'quit': jesse\n",
-      "Please tell me someone I should know, or enter 'quit': jessica\n",
-      "Please tell me someone I should know, or enter 'quit': tim\n",
-      "Please tell me someone I should know, or enter 'quit': quit\n",
-      "['guido', 'jesse', 'jessica', 'tim', 'quit']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start with an empty list. You can 'seed' the list with\n",
     "#  some predefined values if you like.\n",
@@ -363,22 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please tell me someone I should know, or enter 'quit': guido\n",
-      "Please tell me someone I should know, or enter 'quit': jesse\n",
-      "Please tell me someone I should know, or enter 'quit': jessica\n",
-      "Please tell me someone I should know, or enter 'quit': tim\n",
-      "Please tell me someone I should know, or enter 'quit': quit\n",
-      "['guido', 'jesse', 'jessica', 'tim']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###highlight=[15,16]\n",
     "# Start with an empty list. You can 'seed' the list with\n",
@@ -412,24 +248,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"Exercises-running\"></a>\n",
-    "Exercises\n",
-    "---\n",
-    "#### Many Games\n",
-    "- Modify *[Game Preferences](#exercises_input)* so your user can add as many games as they like."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[top](#)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Using while loops to make menus\n",
     "===\n",
     "You now have enough Python under your belt to offer users a set of choices, and then respond to those choices until they choose to quit. Let's look at a simple example, and then analyze the code:"
@@ -437,49 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Welcome to the nature center. What would you like to do?\n",
-      "\n",
-      "[1] Enter 1 to take a bicycle ride.\n",
-      "[2] Enter 2 to go for a run.\n",
-      "[3] Enter 3 to climb a mountain.\n",
-      "[q] Enter q to quit.\n",
-      "\n",
-      "What would you like to do? 1\n",
-      "\n",
-      "Here's a bicycle. Have fun!\n",
-      "\n",
-      "\n",
-      "[1] Enter 1 to take a bicycle ride.\n",
-      "[2] Enter 2 to go for a run.\n",
-      "[3] Enter 3 to climb a mountain.\n",
-      "[q] Enter q to quit.\n",
-      "\n",
-      "What would you like to do? 3\n",
-      "\n",
-      "Here's a map. Can you leave a trip plan for us?\n",
-      "\n",
-      "\n",
-      "[1] Enter 1 to take a bicycle ride.\n",
-      "[2] Enter 2 to go for a run.\n",
-      "[3] Enter 3 to climb a mountain.\n",
-      "[q] Enter q to quit.\n",
-      "\n",
-      "What would you like to do? q\n",
-      "\n",
-      "Thanks for playing. See you later.\n",
-      "\n",
-      "Thanks again, bye now.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Give the user some context.\n",
     "print(\"\\nWelcome to the nature center. What would you like to do?\")\n",
@@ -523,49 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Welcome to the nature center. What would you like to do?\n",
-      "\n",
-      "[1] Enter 1 to take a bicycle ride.\n",
-      "[2] Enter 2 to go for a run.\n",
-      "[3] Enter 3 to climb a mountain.\n",
-      "[q] Enter q to quit.\n",
-      "\n",
-      "What would you like to do? 1\n",
-      "\n",
-      "Here's a bicycle. Have fun!\n",
-      "\n",
-      "\n",
-      "[1] Enter 1 to take a bicycle ride.\n",
-      "[2] Enter 2 to go for a run.\n",
-      "[3] Enter 3 to climb a mountain.\n",
-      "[q] Enter q to quit.\n",
-      "\n",
-      "What would you like to do? 3\n",
-      "\n",
-      "Here's a map. Can you leave a trip plan for us?\n",
-      "\n",
-      "\n",
-      "[1] Enter 1 to take a bicycle ride.\n",
-      "[2] Enter 2 to go for a run.\n",
-      "[3] Enter 3 to climb a mountain.\n",
-      "[q] Enter q to quit.\n",
-      "\n",
-      "What would you like to do? q\n",
-      "\n",
-      "Thanks for playing. See you later.\n",
-      "\n",
-      "Thanks again, bye now.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###highlight=[2,3,4,5,6,7,8,9,10,30,31,32,33,34,35]\n",
     "# Define the actions for each choice we want to offer.\n",
@@ -622,13 +360,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[top](#)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Using while loops to process items in a list\n",
     "===\n",
     "In the section on Lists, you saw that we can `pop()` items from a list. You can use a while list to pop items one at a time from one list, and work with them in whatever way you need. Let's look at an example where we process a list of unconfirmed users."
@@ -636,28 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confirming user Daria...confirmed!\n",
-      "Confirming user Clarence...confirmed!\n",
-      "Confirming user Billy...confirmed!\n",
-      "Confirming user Ada...confirmed!\n",
-      "\n",
-      "Unconfirmed users:\n",
-      "\n",
-      "Confirmed users:\n",
-      "- Daria\n",
-      "- Clarence\n",
-      "- Billy\n",
-      "- Ada\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start with a list of unconfirmed users, and an empty list of confirmed users.\n",
     "unconfirmed_users = ['ada', 'billy', 'clarence', 'daria']\n",
@@ -692,28 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confirming user Ada...confirmed!\n",
-      "Confirming user Billy...confirmed!\n",
-      "Confirming user Clarence...confirmed!\n",
-      "Confirming user Daria...confirmed!\n",
-      "\n",
-      "Unconfirmed users:\n",
-      "\n",
-      "Confirmed users:\n",
-      "- Ada\n",
-      "- Billy\n",
-      "- Clarence\n",
-      "- Daria\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###highlight=[10]\n",
     "# Start with a list of unconfirmed users, and an empty list of confirmed users.\n",
@@ -745,13 +438,6 @@
    "metadata": {},
    "source": [
     "This is a little nicer, because we are sure to get to everyone, even when our program is running under a heavy load. We also preserve the order of people as they join our project. Notice that this all came about by adding *one character* to our program!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[top](#)"
    ]
   },
   {
@@ -806,21 +492,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###highlight=[7]\n",
     "current_number = 1\n",
@@ -881,65 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"Exercises-infinite\"></a>\n",
-    "Exercises\n",
     "---\n",
-    "#### Marveling at Infinity\n",
-    "- Use one of the examples of a failed while loop to create an infinite loop.\n",
-    "- Interrupt your output.\n",
-    "- Marvel at the fact that if you had not interrupted your output, your computer would have kept doing what you told it to until it ran out of power, or memory, or until the universe went cold around it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[top](#)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Overall Challenges\n",
-    "===\n",
-    "#### Gaussian Addition\n",
-    "This challenge is inspired by a story about the mathematician Carl Frederich Gauss. [As the story goes](http://mathforum.org/library/drmath/view/57919.html), when young Gauss was in grade school his teacher got mad at his class one day.\n",
-    "\n",
-    "\"I'll keep the lot of you busy for a while\", the teacher said sternly to the group. \"You are to add the numbers from 1 to 100, and you are not to say a word until you are done.\"\n",
-    "\n",
-    "The teacher expected a good period of quiet time, but a moment later our mathematician-to-be raised his hand with the answer. \"It's 5050!\" Gauss had realized that if you list all the numbers from 1 to 100, you can always match the first and last numbers in the list and get a common answer:\n",
-    "\n",
-    "    1, 2, 3, ..., 98, 99, 100\n",
-    "    1 + 100 = 101\n",
-    "    2 + 99 = 101\n",
-    "    3 + 98 = 101\n",
-    "\n",
-    "Gauss realized there were exactly 50 pairs of numbers in the range 1 to 100, so he did a quick calculation: 50 * 101 = 5050.\n",
-    "\n",
-    "- Write a program that passes a list of numbers to a function.\n",
-    "    - The function should use a while loop to keep popping the first and last numbers from the list and calculate the sum of those two numbers.\n",
-    "    - The function should print out the current numbers that are being added, and print their partial sum.\n",
-    "    - The function should keep track of how many partial sums there are.\n",
-    "    - The function should then print out how many partial sums there were.\n",
-    "    - The function should perform Gauss' multiplication, and report the final answer.\n",
-    "- Prove that your function works, by passing in the range 1-100, and verifying that you get 5050.\n",
-    "    - `gauss_addition(list(range(1,101)))`\n",
-    "- Your function should work for any set of consecutive numbers, as long as that set has an even length.\n",
-    "    - Bonus: Modify your function so that it works for any set of consecutive numbers, whether that set has an even or odd length."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[top](#)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**NEXT TOPIC:** [Dictionaries](07_dictionaries.ipynb)"
    ]
   },
