--- a/notebooks/10_file_io.ipynb
+++ b/notebooks/10_file_io.ipynb
@@ -19,36 +19,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "file1 = open(\"example.txt\",\"w\") # use 'a' for appending to a file\n",
     "text = \"Hello \\n\"\n",
     "file1.write(text)\n",
-    "#file1.writelines(text) to write LINES\n",
+    "#file1.writelines(text) to write a list of text\n",
     "file1.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file1 = open(\"example.txt\",\"r\")  \n",
     "  \n",
     "text = file1.read() \n",
-    "#file1.readlines() to read LINES\n",
+    "#file1.readlines() to read a list of text\n",
     "\n",
     "print(text)\n",
     "  "
@@ -65,25 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Mighty Morphin Red Ranger,Jason Lee Scott,Tyrannosaurus',\n",
-       " 'Mighty Morphin Yellow Ranger,Trini Kwan,Saber-Toothed Tiger',\n",
-       " 'Mighty Morphin Blue Ranger,Billy Cranston,Triceratops',\n",
-       " 'Mighty Morphin Pink Ranger,Kimberly Ann Hart,Pterodactyl',\n",
-       " 'Mighty Morphin Black Ranger,Zack Taylor,Mastodon',\n",
-       " 'Mighty Morphin Green Ranger,Tommy Oliver,Dragonzord']"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_text = \"\"\"Mighty Morphin Red Ranger,Jason Lee Scott,Tyrannosaurus\n",
     "Mighty Morphin Yellow Ranger,Trini Kwan,Saber-Toothed Tiger\n",
@@ -98,25 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Mighty Morphin Red Ranger', 'Jason Lee Scott', 'Tyrannosaurus'],\n",
-       " ['Mighty Morphin Yellow Ranger', 'Trini Kwan', 'Saber-Toothed Tiger'],\n",
-       " ['Mighty Morphin Blue Ranger', 'Billy Cranston', 'Triceratops'],\n",
-       " ['Mighty Morphin Pink Ranger', 'Kimberly Ann Hart', 'Pterodactyl'],\n",
-       " ['Mighty Morphin Black Ranger', 'Zack Taylor', 'Mastodon'],\n",
-       " ['Mighty Morphin Green Ranger', 'Tommy Oliver', 'Dragonzord']]"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_text_list = []\n",
     "for row in csv_text:\n",
@@ -127,22 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mighty Morphin Red Ranger,Jason Lee Scott,Tyrannosaurus\n",
-      "Mighty Morphin Yellow Ranger,Trini Kwan,Saber-Toothed Tiger\n",
-      "Mighty Morphin Blue Ranger,Billy Cranston,Triceratops\n",
-      "Mighty Morphin Pink Ranger,Kimberly Ann Hart,Pterodactyl\n",
-      "Mighty Morphin Black Ranger,Zack Taylor,Mastodon\n",
-      "Mighty Morphin Green Ranger,Tommy Oliver,Dragonzord\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for row in csv_text_list:\n",
     "    tmp_text = \",\".join(row)\n",
@@ -151,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,17 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mighty Morphin Red Ranger,Jason Lee Scott,Tyrannosaurus\\n', 'Mighty Morphin Yellow Ranger,Trini Kwan,Saber-Toothed Tiger\\n', 'Mighty Morphin Blue Ranger,Billy Cranston,Triceratops\\n', 'Mighty Morphin Pink Ranger,Kimberly Ann Hart,Pterodactyl\\n', 'Mighty Morphin Black Ranger,Zack Taylor,Mastodon\\n', 'Mighty Morphin Green Ranger,Tommy Oliver,Dragonzord\\n']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file1 = open(\"example.csv\",\"r\")  \n",
     "  \n",
@@ -188,22 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mighty Morphin Red Ranger Jason Lee Scott Tyrannosaurus \n",
-      "Mighty Morphin Yellow Ranger Trini Kwan Saber-Toothed Tiger \n",
-      "Mighty Morphin Blue Ranger Billy Cranston Triceratops \n",
-      "Mighty Morphin Pink Ranger Kimberly Ann Hart Pterodactyl \n",
-      "Mighty Morphin Black Ranger Zack Taylor Mastodon \n",
-      "Mighty Morphin Green Ranger Tommy Oliver Dragonzord \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for row in text:\n",
     "    for col in row.split(\",\"):\n",
@@ -220,23 +145,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    bytesliteral   ::=  bytesprefix(shortbytes | longbytes)\n",
-    "    bytesprefix    ::=  \"b\" | \"B\" | \"br\" | \"Br\" | \"bR\" | \"BR\"\n",
-    "    shortbytes     ::=  \"'\" shortbytesitem* \"'\" | '\"' shortbytesitem* '\"'\n",
-    "    longbytes      ::=  \"'''\" longbytesitem* \"'''\" | '\"\"\"' longbytesitem* '\"\"\"'\n",
-    "    shortbytesitem ::=  shortbyteschar | bytesescapeseq\n",
-    "    longbytesitem  ::=  longbyteschar | bytesescapeseq\n",
-    "    shortbyteschar ::=  <any ASCII character except \"\\\" or newline or the quote>\n",
-    "    longbyteschar  ::=  <any ASCII character except \"\\\">\n",
-    "    bytesescapeseq ::=  \"\\\" <any ASCII character>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,17 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 10, 15, 20, 25]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# How to read\n",
     "\n",
@@ -283,18 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Timmy => {'key': 'Timmy', 'name': 'Timmy Nooklet', 'age': 21, 'pay': 20000}\n",
-      "Tommy => {'key': 'Tommy', 'name': 'Tommy Nooklet', 'age': 23, 'pay': 24000}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Timmy = {'key' : 'Timmy', 'name' : 'Timmy Nooklet', \n",
     "'age' : 21, 'pay' : 20000} \n",
@@ -312,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,18 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Timmy => {'key': 'Timmy', 'name': 'Timmy Nooklet', 'age': 21, 'pay': 20000}\n",
-      "Tommy => {'key': 'Tommy', 'name': 'Tommy Nooklet', 'age': 23, 'pay': 24000}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for reading also binary mode is important \n",
     "dbfile = open('example.pkl', 'rb')      \n",
@@ -363,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,18 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'userId': 1, 'id': 1, 'title': \"The Philosopher's Stone\", 'completed': False}\n",
-      "{'userId': 2, 'id': 2, 'title': 'The Chamber of Secrets', 'completed': True}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     " \n",
     "jsonfile = open('example.json', 'r') \n",
@@ -419,8 +294,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "**NEXT TOPIC:** [terminal apps](11_terminal_apps.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
