--- a/notebooks/98_contents.ipynb
+++ b/notebooks/98_contents.ipynb
@@ -16,7 +16,7 @@
     "---\n",
     "The classic \"Hello world\" program in Python. Use this to make sure your computer is set up to run Python programs properly.\n",
     "\n",
-    "[Hello World notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/hello_world.ipynb)"
+    "[Hello World notebook](01_hello_world.ipynb)"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "---\n",
     "In this section, you will learn to store information in variables. You will learn about two types of data: strings, which are sets of characters, and numerical data types.\n",
     "\n",
-    "[Variables Strings Numbers noteboook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/var_string_num.ipynb)"
+    "[Variables Strings Numbers noteboook](02_var_string_num.ipynb)"
    ]
   },
   {
@@ -36,9 +36,9 @@
    "source": [
     "Lists and Tuples\n",
     "---\n",
-    "In this notebook, you will learn to store more than one valuable in a single variable. This by itself is one of the most powerful ideas in programming, and it introduces a number of other central concepts such as loops. If this section ends up making sense to you, you will be able to start writing some interesting programs, and you can be more confident that you will be able to develop overall competence as a programmer.\n",
+    "In this notebook, you will learn to store more than one valuable in a single variable.\n",
     "\n",
-    "[Lists and Tuples notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/lists_tuples.ipynb)"
+    "[Lists and Tuples notebook](03_lists_tuples.ipynb)"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "---\n",
     "One of the core principles of any programming language is, \"Don't Repeat Yourself\". If you have an action that should occur many times, you can define that action once and then call that code whenever you need to carry out that action.\n",
     "\n",
-    "[Introducing Functions notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/introducing_functions.ipynb)"
+    "[Introducing Functions notebook](04_introducing_functions.ipynb)"
    ]
   },
   {
@@ -60,7 +60,7 @@
     "---\n",
     "By allowing you to respond selectively to different situations and conditions, if statements open up whole new possibilities for your programs. In this section, you will learn how to test for certain conditions, and then respond in appropriate ways to those conditions.\n",
     "\n",
-    "[If Statements notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/if_statements.ipynb)"
+    "[If Statements notebook](05_if_statements.ipynb)"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "---\n",
     "While loops are really useful because they let your program run until a user decides to quit the program. They set up an infinite loop that runs until the user does something to end the loop. This section also introduces the first way to get input from your program's users.\n",
     "\n",
-    "[While Loops and Input notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/while_input.ipynb)"
+    "[While Loops and Input notebook](06_while_input.ipynb)"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "---\n",
     "Dictionaries allow us to store connected bits of information. For example, you might store a person's name and age together.\n",
     "\n",
-    "[Dictionaries notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/dictionaries.ipynb)"
+    "[Dictionaries notebook](07_dictionaries.ipynb)"
    ]
   },
   {
@@ -93,7 +93,7 @@
     "---\n",
     "Earlier we learned the most bare-boned versions of functions. In this section we will learn more general concepts about functions, such as how to use functions to return values, and how to pass different kinds of data structures between functions.\n",
     "\n",
-    "[More Functions notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/more_functions.ipynb)"
+    "[More Functions notebook](08_more_functions.ipynb)"
    ]
   },
   {
@@ -104,18 +104,27 @@
     "---\n",
     "So far we have learned about Python's core data types: strings, numbers, lists, tuples, and dictionaries. In this section we learn about the last major data structure, classes. Classes are quite unlike the other data types, in that they are much more flexible. Classes allow you to define the information and behavior that characterize anything you want to model in your program. Classes are a rich topic, so we will learn just enough here to dive into the projects you'd like to get started on.\n",
     "\n",
-    "[Classes notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/classes.ipynb)"
+    "[Classes notebook](09_classes.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basic Terminal Apps\n",
+    "Basic File I/O\n",
     "---\n",
-    "By this point, you have learned enough Python to start building interactive apps. If you are set on the larger projects such as building a video game, making a visualization, or making a web app, you can skip this section. But if you would like to start building some simpler apps that run directly in your terminal, check out this notebook.\n",
+    "Let's talk about the basic files where we can write data and read data from.\n",
     "\n",
-    "Terminal apps are a great way to build the core functionality of a program you are interested in, which can then be extended into a more accessible format.\n",
+    "[basic file io notebook](10_file_io.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic  Apps\n",
+    "---\n",
+    "By this point, you have learned enough Python to start building interactive apps. \n",
     "\n",
     "[Basic Terminal Apps notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/terminal_apps.ipynb)"
    ]
