--- a/notebooks/03_lists_tuples.ipynb
+++ b/notebooks/03_lists_tuples.ipynb
@@ -1850,11 +1850,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have a dog.\n",
+      "I have a cat.\n",
+      "I have a bear.\n"
+     ]
+    }
+   ],
    "source": [
-    "animals = ['dog', 'cat', 'bear']\n",
+    "animals = ('dog', 'cat', 'bear')\n",
     "for animal in animals:\n",
     "    print(\"I have a \" + animal + \".\")"
    ]
@@ -1889,11 +1899,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have a dog.\n",
+      "I have a cat.\n",
+      "I have a bear.\n"
+     ]
+    }
+   ],
    "source": [
-    "animals = ['dog', 'cat', 'bear']\n",
+    "animals = ('dog', 'cat', 'bear')\n",
     "for animal in animals:\n",
     "    print(\"I have a %s.\" % animal)"
    ]
@@ -1907,11 +1927,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have a dog, a cat, and a bear.\n"
+     ]
+    }
+   ],
    "source": [
-    "animals = ['dog', 'cat', 'bear']\n",
+    "animals = ('dog', 'cat', 'bear')\n",
     "print(\"I have a %s, a %s, and a %s.\" % (animals[0], animals[1], animals[2]))"
    ]
   },
@@ -1973,6 +2001,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite number is 23.010000.\n"
+     ]
+    }
+   ],
+   "source": [
+    "###highlight=[3]\n",
+    "float_number = 23.01\n",
+    "print(\"My favorite number is %f.\" % float_number) #example of a float"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1981,11 +2028,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite numbers are 7, 23, and 42.\n"
+     ]
+    }
+   ],
    "source": [
-    "numbers = [7, 23, 42]\n",
+    "numbers = (7, 23, 42)\n",
     "print(\"My favorite numbers are %d, %d, and %d.\" % (numbers[0], numbers[1], numbers[2]))"
    ]
   },
@@ -1998,12 +2053,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite numbers are 7, 23, and 42.\n"
+     ]
+    }
+   ],
    "source": [
     "###highlight=[3]\n",
-    "numbers = [7, 23, 42]\n",
+    "numbers = (7, 23, 42)\n",
     "print(\"My favorite numbers are \" + str(numbers[0]) + \", \" + str(numbers[1]) + \", and \" + str(numbers[2]) + \".\")"
    ]
   },
@@ -2016,12 +2079,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jericho's favorite number is 23, and Alfred's favorite number is 2.\n"
+     ]
+    }
+   ],
    "source": [
-    "names = ['jericho', 'alfred']\n",
-    "numbers = [23, 2]\n",
+    "names = ('jericho', 'alfred')\n",
+    "numbers = (23, 2)\n",
     "print(\"%s's favorite number is %d, and %s's favorite number is %d.\" % (names[0].title(), numbers[0], names[1].title(), numbers[1]))"
    ]
   },
