--- a/notebooks/11_terminal_apps.ipynb
+++ b/notebooks/11_terminal_apps.ipynb
@@ -27,9 +27,7 @@
     "    - [Reducing repeated code](#Reducing-repeated-code)\n",
     "- [Building Greeter](#Building-greeter)\n",
     "    - [Basic Pickling](#Basic-Pickling)\n",
-    "    - [Pickling in Greeter](#Pickling-in-Greeter)\n",
-    "- [Overall Exercises](#Overall-Exercises)\n",
-    "- [Overall Challenges](#Overall-Challenges)"
+    "    - [Pickling in Greeter](#Pickling-in-Greeter)"
    ]
   },
   {
@@ -1106,8 +1104,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "**CONGRATS FOR FINISHING!:** [Go back to index](00_index.ipynb)"
+    "- - -\n",
+    "**NEXT TOPIC:** [Try Except Finally Statements](12_try_except.ipynb)\n"
    ]
   },
   {
