--- a/notebooks/10_file_io.ipynb
+++ b/notebooks/10_file_io.ipynb
@@ -13,6 +13,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Python has several functions for creating, reading, updating, and deleting files.\n",
+    "\n",
+    "# File Handling\n",
+    "The key function for working with files in Python is the open() function.\n",
+    "\n",
+    "The open() function takes two parameters; filename, and mode.\n",
+    "\n",
+    "There are four different methods (modes) for opening a file:\n",
+    "\n",
+    "\"r\" - Read - Default value. Opens a file for reading, error if the file does not exist\n",
+    "\n",
+    "\"a\" - Append - Opens a file for appending, creates the file if it does not exist\n",
+    "\n",
+    "\"w\" - Write - Opens a file for writing, creates the file if it does not exist\n",
+    "\n",
+    "\"x\" - Create - Creates the specified file, returns an error if the file exists\n",
+    "\n",
+    "In addition you can specify if the file should be handled as binary or text mode\n",
+    "\n",
+    "\"t\" - Text - Default value. Text mode\n",
+    "\n",
+    "\"b\" - Binary - Binary mode (e.g. images)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Text\n",
     "==="
    ]
@@ -288,6 +316,69 @@
     "\n",
     "for keys in new_db: \n",
     "    print(keys) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Delete a File\n",
+    "To delete a file, you must import the OS module, and run its os.remove() function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 2] The system cannot find the file specified: 'demofile.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-5ef3d5724ba4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"demofile.txt\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'demofile.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove the file \"demofile.txt\":\n",
+    "\n",
+    "import os\n",
+    "os.remove(\"demofile.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check if File exist:\n",
+    "To avoid getting an error, you might want to check if the file exists before you try to delete it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if file exists, then delete it:\n",
+    "\n",
+    "import os\n",
+    "if os.path.exists(\"demofile.txt\"):\n",
+    "  os.remove(\"demofile.txt\")\n",
+    "else:\n",
+    "  print(\"The file does not exist\")"
    ]
   },
   {
