--- a/notebooks/98_contents.ipynb
+++ b/notebooks/98_contents.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hello World\n",
+    "01 Hello World\n",
     "---\n",
     "The classic \"Hello world\" program in Python. Use this to make sure your computer is set up to run Python programs properly.\n",
     "\n",
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Variables, Strings, and Numbers\n",
+    "02 Variables, Strings, and Numbers\n",
     "---\n",
     "In this section, you will learn to store information in variables. You will learn about two types of data: strings, which are sets of characters, and numerical data types.\n",
     "\n",
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lists and Tuples\n",
+    "03 Lists and Tuples\n",
     "---\n",
     "In this notebook, you will learn to store more than one valuable in a single variable.\n",
     "\n",
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introducing Functions\n",
+    "04 Introducing Functions\n",
     "---\n",
     "One of the core principles of any programming language is, \"Don't Repeat Yourself\". If you have an action that should occur many times, you can define that action once and then call that code whenever you need to carry out that action.\n",
     "\n",
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If Statements\n",
+    "05 If Statements\n",
     "---\n",
     "By allowing you to respond selectively to different situations and conditions, if statements open up whole new possibilities for your programs. In this section, you will learn how to test for certain conditions, and then respond in appropriate ways to those conditions.\n",
     "\n",
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While Loops and Input\n",
+    "06 While Loops and Input\n",
     "---\n",
     "While loops are really useful because they let your program run until a user decides to quit the program. They set up an infinite loop that runs until the user does something to end the loop. This section also introduces the first way to get input from your program's users.\n",
     "\n",
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries\n",
+    "07 Dictionaries\n",
     "---\n",
     "Dictionaries allow us to store connected bits of information. For example, you might store a person's name and age together.\n",
     "\n",
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More Functions\n",
+    "08 More Functions\n",
     "---\n",
     "Earlier we learned the most bare-boned versions of functions. In this section we will learn more general concepts about functions, such as how to use functions to return values, and how to pass different kinds of data structures between functions.\n",
     "\n",
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Classes\n",
+    "09 Classes\n",
     "---\n",
     "So far we have learned about Python's core data types: strings, numbers, lists, tuples, and dictionaries. In this section we learn about the last major data structure, classes. Classes are quite unlike the other data types, in that they are much more flexible. Classes allow you to define the information and behavior that characterize anything you want to model in your program. Classes are a rich topic, so we will learn just enough here to dive into the projects you'd like to get started on.\n",
     "\n",
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basic File I/O\n",
+    "10 Basic File I/O\n",
     "---\n",
     "Let's talk about the basic files where we can write data and read data from.\n",
     "\n",
@@ -122,11 +122,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basic  Apps\n",
+    "11 Basic  Apps\n",
     "---\n",
     "By this point, you have learned enough Python to start building interactive apps. \n",
     "\n",
-    "[Basic Terminal Apps notebook](http://nbviewer.ipython.org/urls/raw.github.com/ehmatthes/intro_programming/master/notebooks/terminal_apps.ipynb)"
+    "[Basic Terminal Apps notebook](11_terminal_apps.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "12 Try Except Finally\n",
+    "---\n",
+    "Let's take a look at how to handle errors\n",
+    "\n",
+    "[Try Except Finally Statements](12_try_except.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "13 Sets Math Date\n",
+    "---\n",
+    "Other useful core modules to look at\n",
+    "\n",
+    "[Sets Math Date](13_Sets_Math_Date.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "[Go back to index](00_index.ipynb)"
    ]
   }
  ],
